--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
